--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,3 +67,19 @@ nav {
     transition: 0.3s;
     border-radius: 10px;
 }
+
+#search-bar {
+    margin-top: 1.5rem;
+    width: 300px;
+    margin: 1.5rem auto 1rem auto;
+}
+
+#search-bar-content{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.75rem;
+    background-color: white;
+    border-radius: 10px;
+    align-items: center;
+    gap: 1rem;
+}
