--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,19 +11,19 @@ html {
     background-color: #f3e9dc;
 }
 
-input, select {
+input, select, textarea {
     width: 100%;
     border-style: none;
     cursor: pointer;
 }
 
-input {
+input, textarea {
     padding-left: 1rem;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
 }
 
-input:hover {
+input:hover, textarea:hover {
     background-color: rgba(128, 128, 128, 0.452);
     transition: 0.3s;
     color: black;
